# newXendlybackend

./: API_DOCUMENTATION.md  Cargo.toml  README.md  backup_db.bat  checklist.md  package-lock.json  restore_db.bat  stellar_wallet.db
src/: errors.rs  lib.rs  main.rs  stellar_wallet.db
src/api/: docs.rs  mod.rs  routes.rs  types.rs
src/cli/: commands.rs  mod.rs
src/database/: sqlite.rs
src/handlers/: account_handler.rs  exchange_handler.rs  jwt_handler.rs  mod.rs  profile_handler.rs  transfer_handler.rs  wallet_handler.rs
src/models/: currency.rs  kyc.rs  mod.rs  notification.rs  stellar_wallet.rs  user.rs
src/services/: auth.rs  exchange_service.rs  jwt.rs  mod.rs  notification_service.rs  stellar_service.rs  two_factor_service.rs  user_service.rs
src/utils/: crypto.rs  middleware.rs  mod.rs  sms.rs  validation.rs
