[package]
name = "newbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
hyper = { version = "1.0", features = ["full"] }
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "2.0", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
colored = "2.1"
rand = "0.8"
argon2 = "0.5"
rpassword = "7.2"
jsonwebtoken = "9.2"
sha2 = "0.10"
ed25519-dalek = "2.1"
regex = "1.10"
lazy_static = "1.4"
hmac = "0.12"
sha1 = "0.10"
image = "0.24"
stellar-strkey = "0.0.13"
base32 = "0.5.1"
rand_core = "0.9.3"
stellar_sdk = "0.1.4"
stellar-xdr = { version = "23.0.0-rc.1", features = ["serde"] }
stellar-base = "0.5.0"
lettre = "0.11.17"
qrcode = { version = "0.14.1", features = ["svg"] }
dashmap = "5.5"
once_cell = "1.18"
